[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/scripts/match.gd" type="Script" id=1]
[ext_resource path="res://assets/scripts/move_handler.gd" type="Script" id=2]
[ext_resource path="res://assets/scenes/utils/Draw.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/scripts/camera.gd" type="Script" id=4]

[node name="Match" type="Node2D"]
script = ExtResource( 1 )

[node name="MapContainer" type="Node2D" parent="."]

[node name="TokenContainer" type="Node2D" parent="."]
z_index = 10
_sections_unfolded = [ "Z Index" ]

[node name="Handler" type="Node2D" parent="."]
_sections_unfolded = [ "Z Index" ]

[node name="Move" type="Node" parent="Handler"]
script = ExtResource( 2 )

[node name="Fight" type="Node" parent="Handler"]

[node name="Draw" parent="." instance=ExtResource( 3 )]
z_index = 5
_sections_unfolded = [ "Script", "Transform", "Z Index" ]

[node name="UI" type="CanvasLayer" parent="."]
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Display" type="Node2D" parent="UI"]

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
script = ExtResource( 4 )

[connection signal="path_changed" from="Handler/Move" to="." method="_on_move_path_changed"]
[connection signal="token_arrived" from="Handler/Move" to="." method="_on_move_token_arrived"]
[connection signal="token_started" from="Handler/Move" to="." method="_on_move_token_started"]
